Fixed rendering problem with Manifest in Advanced Editor
Issue was that it was attaching col-md-10 to the Manifest text input,
which was adding a float:left to the rendering, which was messed up.

Also, more look-and-feel tweaks.

--- a/querki/scalajvm/public/stylesheets/main.css
+++ b/querki/scalajvm/public/stylesheets/main.css
@@ -72,9 +72,8 @@ body {
   width: 100%;
 }
 
-/* Equivalent of the span10 for the rest of the controls. */
-.controls .mf_container {
-  width: 83%;
+._instanceEditor .mf_container {
+  width: 100%;
 }
 
 /*
@@ -154,9 +153,9 @@ body {
   width: 80%;
 }
 
-.sortableList > li .icon-move { 
-  position: absolute;
+.sortableList > li .glyphicon-move { 
   margin-left: -1.3em;
+  margin-right: 3px;
 }
 
 
@@ -196,6 +195,7 @@ body {
   width: 100%;
   height: 26px;
   box-sizing: border-box;
+  padding-left: 3px;
 }
 
 ._instanceEditor ._deleteInstanceButton {
